kustomize/overlays/eu-west-cluster/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-api-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
spec:
  rules:
    - host: 95.179.208.170.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foobar-api
                port:
                  number: 80
