kustomize/overlays/eu-west-cluster/ingressroute-eu.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: foobar-api-tcp
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`paris-cluster.95.179.208.170.nip.io`)
      services:
        - name: foobar-api
          port: 80
  tls:
    passthrough: true
